refactor(security): unify token handling components and update auth flow
- Combined all token-related clients (access, email verification, password reset) into unified interfaces/classes:
  - `UserTokenUseCase` / `UserTokenService`
  - `UserTokenValidatorUseCase` / `UserTokenValidator`
- Merged `JwtTokenController` and `UserTokenController` into a single `UserTokenController` to centralize token endpoints.
- Updated endpoint paths and applied consistent naming across classes, interfaces, methods, and URLs.
- Refactored `AuthorizationController.authorize()` to return `Mono<Boolean>` and use the service implementation directly instead of the interface.
- Improved logic in `UserPrincipal` to better handle identity and roles.
- Added token purpose field to clarify access token usage.
- Updated Flyway migration file to reflect schema changes related to token purpose and consistency improvements.